--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -6,6 +6,12 @@
   --font-size-l: 24px;
   --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+  --font-line-xl: 40px;
+  --font-size-xl: 32px;
+  --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
+  
+
+  // Размеры
   --navbar-height: 50px;
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
