--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -4,11 +4,16 @@
   padding: 6px 10px;
 }
 
-.clear {
+.clear,
+.clearInverted {
   padding: 0;
   border: none;
   outline: none;
   background: none;
+}
+
+.clearInverted {
+  color: var(--inverted-primary-color);
 }
 
 .outline {
