--- a/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -1,10 +1,3 @@
-.items {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-  margin-left: 30px;
-}
-
 .item {
   margin-top: 10px;
   display: flex;
@@ -13,8 +6,17 @@
 
 .link {
   margin-left: 10px;
+  opacity: 1;
 }
 
 .icon {
   fill: var(--inverted-primary-color);
+}
+
+.collapsed {
+  .link {
+    opacity: 0;
+    transition: 0.2s opacity;
+    width: 0;
+  }
 }
